[gd_scene load_steps=8 format=3 uid="uid://claoqiocun5rt"]

[ext_resource type="Script" path="res://Scenes/Player/PlayerBomb.gd" id="1_prcmf"]
[ext_resource type="Texture2D" uid="uid://brsccllo67eco" path="res://Assets/Tiles/tile_0018.png" id="2_6hway"]
[ext_resource type="Texture2D" uid="uid://dpg4c2khrhqr1" path="res://Assets/Tiles/bombexplosion.png" id="3_kykwu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_anxx7"]
radius = 3.0
height = 12.0

[sub_resource type="Animation" id="Animation_6byfw"]
resource_name = "bombexplode"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bomb:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("explosion/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(60, 60)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bombexplosion:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("bombexplosion:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.240156, 0.240156), Vector2(14.75, 14.75)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h0c76"]
_data = {
"bombexplode": SubResource("Animation_6byfw")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_cle34"]
radius = 6.08276

[node name="PlayerBomb" type="Area2D"]
script = ExtResource("1_prcmf")

[node name="bomb" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_6hway")

[node name="bombexplosion" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(0.240156, 0.240156)
texture = ExtResource("3_kykwu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_anxx7")

[node name="despawn timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="bombexplode" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h0c76")
}

[node name="explosion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="explosion"]
shape = SubResource("CircleShape2D_cle34")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="despawn timer" to="." method="_on_despawn_timer_timeout"]
[connection signal="body_entered" from="explosion" to="." method="_on_explosion_body_entered"]
